--- a/about.html
+++ b/about.html
@@ -74,27 +74,6 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <div class="site-search-btn float-right">
-                <div class="el-search position-relative">
-                    <i class="el-search-btn fas fa-search"></i>
-                    <div class="search-body">
-                        <div class="search-form">
-                            <form action="#">
-                                <input class="search-input" type="search" placeholder="Search Here">
-                                <div class="outer-close el-search-btn">
-                                    <i class="fas fa-times"></i>
-                                </div>
-                                <button type="submit" class="search-close">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-btn text-center  text-uppercase">
-                    <a href="#">consultation <i class="flaticon-next"></i></a>
-                </div>
-            </div>
         </div>
     </div>
     <!-- desktop-menu -->
@@ -200,13 +179,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12" style="margin-bottom: 20px;">
                     <div class="about-img clearfix">
-                        <div class="abt-img-set" data-tilt data-tilt-max="10">
-                            <img src="assets/img/about/ab1.jpg" alt="">
-                        </div>
-                        <div class="abt-img-set" data-tilt data-tilt-max="10">
-                            <img src="assets/img/about/ab2.jpg" alt="">
-                        </div>
-
+                        <img src="assets/img/about/ab1.jpg" style="padding: 10px;">
+                        <img src="assets/img/about/ab2.jpg" style="padding: 10px;">
                     </div>
                 </div>
 
@@ -217,9 +191,7 @@
                     </div>
 
                     <div class="about-img clearfix">
-                        <div class="abt-img-set" data-tilt data-tilt-max="10">
-                            <img src="assets/img/contact/1.jpg" alt="">
-                        </div>
+                        <img src="assets/img/contact/1.jpg" style="padding: 10px;">
                     </div>
                 </div>
 
