--- a/contact.html
+++ b/contact.html
@@ -75,27 +75,6 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <div class="site-search-btn float-right">
-                <div class="el-search position-relative">
-                    <i class="el-search-btn fas fa-search"></i>
-                    <div class="search-body">
-                        <div class="search-form">
-                            <form action="#">
-                                <input class="search-input" type="search" placeholder="Search Here">
-                                <div class="outer-close el-search-btn">
-                                    <i class="fas fa-times"></i>
-                                </div>
-                                <button type="submit" class="search-close">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-btn text-center  text-uppercase">
-                    <a href="#">consultation <i class="flaticon-next"></i></a>
-                </div>
-            </div>
         </div>
     </div>
     <!-- desktop-menu -->
@@ -183,9 +162,10 @@
                             <div class="contact-text pera-content headline">
                                 <h4 >Contact us</h4>
                                 <p style="margin-top: 40px;">
-                                    <STRONG >Telephone：1800 810 680 </STRONG>
+                                    <STRONG ></STRONG>Telephone：1800 810 680
                                     <br/>
                                     Email：<a href="mailto:community.input@ghd.com">community.input@ghd.com</a>
+
                                 </p>
                             </div>
                         </div>
