--- a/technology.html
+++ b/technology.html
@@ -71,27 +71,6 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <div class="site-search-btn float-right">
-                <div class="el-search position-relative">
-                    <i class="el-search-btn fas fa-search"></i>
-                    <div class="search-body">
-                        <div class="search-form">
-                            <form action="#">
-                                <input class="search-input" type="search" placeholder="Search Here">
-                                <div class="outer-close el-search-btn">
-                                    <i class="fas fa-times"></i>
-                                </div>
-                                <button type="submit" class="search-close">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-btn text-center  text-uppercase">
-                    <a href="#">consultation <i class="flaticon-next"></i></a>
-                </div>
-            </div>
         </div>
     </div>
     <!-- desktop-menu -->
@@ -159,56 +138,6 @@
 <section id="service-details" class="service-details-section">
     <div class="container">
         <div class="row">
-            <!--				<div class="col-lg-4 col-md-6">-->
-            <!--					<div class="service-sidebar">-->
-            <!--						<div class="service-sidebar-widget">-->
-            <!--							<div class="service-cat-widget ul-li-block">-->
-            <!--								<h3 class="widget-title">Services We Offer</h3>-->
-            <!--								<ul>-->
-            <!--									<li><a href="#">Oil Industry</a></li>-->
-            <!--									<li><a href="#">Solar Energy</a></li>-->
-            <!--									<li><a href="#">Hydro Electricity</a></li>-->
-            <!--									<li><a href="#">Power Plants</a></li>-->
-            <!--									<li><a href="#">Water Turbines</a></li>-->
-            <!--								</ul>-->
-            <!--							</div>-->
-            <!--						</div>-->
-            <!--						<div class="service-sidebar-widget">-->
-            <!--							<div class="help-widget pera-content">-->
-            <!--								<h3 class="widget-title">Need Help?</h3>-->
-            <!--								<span>Call us or Email</span>-->
-            <!--								<div class="contact-text pera-content headline">-->
-            <!--									<p><i class="icon-call-in"></i><strong>XXX <br></strong>-->
-            <!--									XXX</p>-->
-            <!--								</div>-->
-            <!--							</div>-->
-            <!--						</div>-->
-            <!--						<div class="service-sidebar-widget">-->
-            <!--							<div class="opening-hour-widget">-->
-            <!--								<h3 class="widget-title">Opening Hours</h3>-->
-            <!--								<div class="opening-hour-content">-->
-            <!--									<span>Monday to Friday</span>-->
-            <!--									<strong>9.00 am – 8.00 pm</strong>-->
-            <!--								</div>-->
-            <!--								<div class="opening-hour-content">-->
-            <!--									<span>Saturday</span>-->
-            <!--									<strong>10.00 am – 6.00 pm</strong>-->
-            <!--								</div>-->
-            <!--								<span>Sunday is Closed</span>-->
-            <!--							</div>-->
-            <!--						</div>-->
-            <!--						<div class="add-widget text-center pera-content position-relative" data-background="assets/img/background/bcbg.jpg">-->
-            <!--							<div class="background_overlay"></div>-->
-            <!--							<h3>Do you need-->
-            <!--								upgrades, repairs-->
-            <!--								or maintainance-->
-            <!--							services also?</h3>-->
-            <!--							<p>Book a free consultancy-->
-            <!--							with one of our many experts</p>-->
-            <!--							<a href="#">GET in Touch <img src="assets/img/arrow3.png" alt=""></a>-->
-            <!--						</div>-->
-            <!--					</div>-->
-            <!--				</div>-->
             <div class="col-lg-12 col-md-12">
                 <div class="service-single-content">
                     <div class="service-details-img-pair">
@@ -216,12 +145,6 @@
                             <div class="col-md-12">
                                 <img src="assets/img/service/ser5.jpg" alt="">
                             </div>
-                            <!--								<div class="col-md-6">-->
-                            <!--									<img src="assets/img/service/serd1.jpg" alt="">-->
-                            <!--								</div>-->
-                            <!--								<div class="col-md-6">-->
-                            <!--									<img src="assets/img/service/serd2.jpg" alt="">-->
-                            <!--								</div>-->
                         </div>
                     </div>
 
@@ -241,7 +164,9 @@
                                 <article>
                                     <br/>
                                     The project includes the construction and operation of a waste plastics sorting and
-                                    plastics recycling facility with operations across two buildings.
+                                    plastics recycling facility with operations across three buildings, plus a building
+                                    for receival and short term of waste plastics, once the plant volumes increase to a
+                                    point where the area within Building 1 is insufficient.
                                 </article>
 
                             </div>
@@ -251,21 +176,18 @@
                         </div>
                     </div>
                     <article>
-                        In the first building, the facility would receive mixed plastics, remove unwanted
-                        materials such as glass pieces and caps and other recyclables, sterilise and
-                        deodorise the material using a pure natural, patented disinfectant solution, and
-                        sort the material by plastic type using optical, smart arm methods. Also located
-                        within the first building would be a centre for recycling research and product
-                        development.
-                        The pellets and flakes would be suitable for sale at this point or they could be
-                        transported to the second building to produce more advanced plastic products such as
-                        polyester fibre and resins.
+                        In the first and second buildings, the facility would receive mixed plastics, remove unwanted
+                        materials such as glass pieces and caps and other recyclables, sterilise and deodorise the
+                        material using a patented disinfectant solution, and sort the material by plastic type using
+                        optical, smart arm methods. Some of the plastics would be heated to 90 to 100 degrees Celsius to
+                        remove labels and then either pelletised or shredded into flakes depending on the original
+                        plastic types.
 
                     </article>
                     <article>
-                        In the second building, the facility would convert the plastic pellets or flakes
-                        into polyester fibres and other plastic products, using leading edge, high
-                        technology processes.
+                        The pellets and flakes would be suitable for sale at this point or they could be transported to
+                        the third building to produce more advanced plastic products such as polyester fibre and resins,
+                        using leading edge, high technology processes.
                     </article>
                     <div class="service-single-icon-text">
                         <div class="site-info-icon-text position-relative">
