--- a/detail1.html
+++ b/detail1.html
@@ -71,27 +71,6 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <div class="site-search-btn float-right">
-                <div class="el-search position-relative">
-                    <i class="el-search-btn fas fa-search"></i>
-                    <div class="search-body">
-                        <div class="search-form">
-                            <form action="#">
-                                <input class="search-input" type="search" placeholder="Search Here">
-                                <div class="outer-close el-search-btn">
-                                    <i class="fas fa-times"></i>
-                                </div>
-                                <button type="submit" class="search-close">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-btn text-center  text-uppercase">
-                    <a href="#">consultation <i class="flaticon-next"></i></a>
-                </div>
-            </div>
         </div>
     </div>
     <!-- desktop-menu -->
@@ -140,12 +119,12 @@
     <div class="background_overlay"></div>
     <div class="container">
         <div class="breadcrumb-content headline">
-            <h2 class="breadcrumb-title">Products</h2>
+            <h2 class="breadcrumb-title">Information</h2>
             <div class="breadcrumb_item ul-li">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">What We Do</a></li>
-                    <li class="breadcrumb-item active">information</li>
+                    <li class="breadcrumb-item active">Information</li>
                 </ul>
             </div>
         </div>
